tests/negative/test_cast_prim_data.orb
data Foo {
    x:i32
};

fnc main() () {
    cast Foo 100;
};